--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>Bat Todo</h1>
-  <script src="main.js"></script>  
+    <input type="text" class= "txt" id = "text" placeholder="digite algo..."/>
+    <input type="submit" id="btn" class="button">
+
+    <div id="res">
+      
+    </div>
+    <script src="main.js"></script>  
 </body>
 </html>
