--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bat Todo</h1>
-    <input type="text" class= "txt" id = "text" placeholder="digite algo..."/>
-    <input type="submit" id="btn" class="button">
+    <header>
+        <h1>Todo list</h1>
+    </header>
+    <div class="section">
+        <div class="input">
+            <input type="text" class= "txt" id = "text" placeholder="digite algo..."/>
+            <input type="submit" id="btn" class="button">
+        </div>
 
-    <div id="res">
-      
+        <div class="res" id="res">
+            
+        </div>
     </div>
     <script src="main.js"></script>  
 </body>
