--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
     <header>
         <h1>Todo list</h1>
     </header>
-    <div class="section">
-        <div class="input">
-            <input type="text" class= "txt" id = "text" placeholder="digite algo..."/>
-            <input type="submit" id="btn" class="button">
-        </div>
-
-        <div class="res" id="res">
-            
-        </div>
+    <div class="input">
+        <input type="text" class= "txt" id = "text" placeholder="digite algo..."/>
+        <input type="submit" id="btn" class="button">
+    </div>
+    <div class="section" id="res">
+        
     </div>
     <script src="main.js"></script>  
 </body>
